Fixed bug 689323: bjc600's gs_closedevice breaks get_page_device and causes NumCopies to barf

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8113 a1074d23-0009-0410-80fe-cf8c14f379e6